# bc200

./: .gitignore  README.md  nrfjprog_qspi_gd25q127c.ini
bc200_fw/: .gitignore  README.md
bc200_fw/.west/: config
bc200_fw/fw/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf  readme.txt  west.yml
bc200_fw/fw/src/: decode_utils.c  decode_utils.h  demo.c  disk.c  draw_menu.c  fw_upgrade.c  main.c  nrf_dfu_types.h
bc200_fw/fw/src/drivers/poll_btns/: CMakeLists.txt  Kconfig  Kconfig.opts  poll_btn.h  poll_btns.c
bc200_fw/fw/src/drivers/st75320/: CMakeLists.txt  Kconfig  Kconfig.opts  display_st75320.c
bc200_fw/fw/src/drivers/st75320/dts/bindings/: sitronix,st75320.yaml
bc200_fw/fw/src/drivers/st75320/zephyr/: module.yml
bc200_fw/jump/: .gitignore  Makefile  README.md  gcc_nrf52.ld  gcc_startup_nrf52840.S  jump.c
fullflash/: int_flash_layout.txt
test/: Makefile  Makefile.common  Makefile.posix  main.c  sdk_config.h
usbfw_decode/: .gitignore  Makefile  decode.c  decode_utils.c  decode_utils.h
